syntax = "proto3";

package com.comparison.hotel.grpc;

option java_multiple_files = true;
option java_package = "com.comparison.hotel.grpc.gen";
option java_outer_classname = "HotelReservationProto";

service ReservationService {
  rpc CreateReservation (CreateReservationRequest) returns (ReservationResponse);
  rpc GetReservation (GetReservationRequest) returns (ReservationResponse);
  rpc UpdateReservation (UpdateReservationRequest) returns (ReservationResponse);
  rpc DeleteReservation (DeleteReservationRequest) returns (DeleteReservationResponse);
}

message CreateReservationRequest {
  int64 client_id = 1;
  int64 chambre_id = 2;
  string date_debut = 3;
  string date_fin = 4;
  string preferences = 5;
}

message GetReservationRequest {
  int64 id = 1;
}

message UpdateReservationRequest {
  int64 id = 1;
  int64 client_id = 2;
  int64 chambre_id = 3;
  string date_debut = 4;
  string date_fin = 5;
  string preferences = 6;
}

message DeleteReservationRequest {
  int64 id = 1;
}

message DeleteReservationResponse {
  bool success = 1;
}

message ReservationResponse {
  int64 id = 1;
  int64 client_id = 2;
  int64 chambre_id = 3;
  string date_debut = 4;
  string date_fin = 5;
  string preferences = 6;
}
